# print-dict

./: README.md  pyproject.toml
examples/: example1.py  example2.py
print_dict/: __init__.py  cli.py  config.py  pprint_python_3_9.py  print_dict.py
tests/: test_print_dict.py
